Create API for beacons

--- a/app/views/beacons/show.html.erb
+++ b/app/views/beacons/show.html.erb
@@ -42,7 +42,7 @@
 
 <p>
   <strong>Url:</strong>
-  <%= @beacon.url %>
+  <%= @beacon.link %>
 </p>
 
 <%= link_to 'Edit', edit_beacon_path(@beacon) %> |
