--- a/app/views/beacons/_form.html.erb
+++ b/app/views/beacons/_form.html.erb
@@ -44,8 +44,8 @@
     <%= f.text_field :location %>
   </div>
   <div class="field">
-    <%= f.label :url %><br>
-    <%= f.text_field :url %>
+    <%= f.label :link %><br>
+    <%= f.text_field :link %>
   </div>
   <div class="actions">
     <%= f.submit %>
