--- a/app/views/beacons/index.html.erb
+++ b/app/views/beacons/index.html.erb
@@ -27,7 +27,7 @@
         <td><%= beacon.lat %></td>
         <td><%= beacon.lng %></td>
         <td><%= beacon.location %></td>
-        <td><%= beacon.url %></td>
+        <td><%= beacon.link %></td>
         <td><%= link_to 'Show', beacon %></td>
         <td><%= link_to 'Edit', edit_beacon_path(beacon) %></td>
         <td><%= link_to 'Destroy', beacon, method: :delete, data: { confirm: 'Are you sure?' } %></td>
