--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,41 @@
 </head>
 <body>
 
-<%= yield %>
+  <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">Shawty</a>
+      </div>
+      <div class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="active"><%= nav_link 'Home', root_path %></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+        </ul>
+      </div><!--/.nav-collapse -->
+
+
+    </div>
+  </div>
+
+  <div class="container">
+
+    <div class="starter-template">
+      <h1>beaconHub</h1>
+    </div>
+    <div>
+
+    <%= yield %>
+
+    </div>
+
+  </div>
 
 </body>
 </html>
