--- a/app/views/beacons/_form.html.erb
+++ b/app/views/beacons/_form.html.erb
@@ -40,8 +40,8 @@
     <%= f.text_field :lng %>
   </div>
   <div class="field">
-    <%= f.label :location %><br>
-    <%= f.text_field :location %>
+    <%= f.label :address %><br>
+    <%= f.text_field :address %>
   </div>
   <div class="field">
     <%= f.label :link %><br>
