--- a/app/views/beacons/index.html.erb
+++ b/app/views/beacons/index.html.erb
@@ -26,7 +26,7 @@
         <td><%= beacon.minor %></td>
         <td><%= beacon.lat %></td>
         <td><%= beacon.lng %></td>
-        <td><%= beacon.location %></td>
+        <td><%= beacon.address %></td>
         <td><%= beacon.link %></td>
         <td><%= link_to 'Show', beacon %></td>
         <td><%= link_to 'Edit', edit_beacon_path(beacon) %></td>
