--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,29 +1,149 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Beaconhub</title>
+  <title>The Beacons Around You | Open Beacon Directory | beaconHub.org</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
 <body>
 
+    <div id="wrapper">
+
+        <!-- Navigation -->
+        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="index.html">Open Beacon Directory</a>
+            </div>
+            <!-- /.navbar-header -->
+
+            <ul class="nav navbar-top-links navbar-right">
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-user">
+                        <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
+                        </li>
+                        <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                        </li>
+                        <li class="divider"></li>
+                        <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
+                        </li>
+                    </ul>
+                    <!-- /.dropdown-user -->
+                </li>
+                <!-- /.dropdown -->
+            </ul>
+            <!-- /.navbar-top-links -->
+
+            <div class="navbar-default sidebar" role="navigation">
+                <div class="sidebar-nav navbar-collapse">
+                    <ul class="nav" id="side-menu">
+                        <li class="sidebar-search">
+                            <div class="input-group custom-search-form">
+                                <input type="text" class="form-control" placeholder="Search...">
+                                <span class="input-group-btn">
+                                <button class="btn btn-default" type="button">
+                                    <i class="fa fa-search"></i>
+                                </button>
+                            </span>
+                            </div>
+                            <!-- /input-group -->
+                        </li>
+                        <li>
+                            <a class="active" href="index.html"><i class="fa fa-list fa-fw"></i> iBeacon Service Management<span class="fa arrow"></span></a>
+              <ul class="nav nav-second-level">
+                <li>
+                  <a href="index.html">List of Beacon Services</a>
+                </li>
+                                <li>
+                                    <a href="add-beacon.html">Add New Service</a>
+                                </li>
+                            </ul>
+                        </li>
+          </ul>
+                </div>
+                <!-- /.sidebar-collapse -->
+            </div>
+            <!-- /.navbar-static-side -->
+        </nav>
+
+        <div id="page-wrapper">
+            <div class="row">
+                <div class="col-lg-12">
+                    <h1 class="page-header">List of Beacon Services</h1>
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="panel panel-default">
+                        <div class="panel-heading">
+                            Beacon Service List
+                        </div>
+                        <!-- /.panel-heading -->
+                        <div class="panel-body">
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered table-hover" id="iBeacons-service-list">
+                                    <thead>
+                                        <tr>
+                                            <th>Service Name</th>
+                                            <th>Service URL</th>
+                                            <th>It's an App?</th>
+                                            <th>Industry</th>
+                                            <th>Usage</th>
+                      <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr class="odd gradeX">
+                                            <td>Know to Read</td>
+                                            <td>http://www.library.com/ibeacon/</td>
+                                            <td>Yes</td>
+                                            <td class="center">Library</td>
+                                            <td class="center">Push favourites</td>
+                      <td><a class="btn btn-primary" href="#">Edit</a></td>
+                                        </tr>
+                                        <tr class="even gradeC">
+                                            <td>HyperMart</td>
+                                            <td>http://www.hypermart.com/ibeacon</td>
+                                            <td>Yes</td>
+                                            <td class="center">Retail</td>
+                                            <td class="center">Discount</td>
+                      <td><a  class="btn btn-primary" href="#">Edit</a></td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                            <!-- /.table-responsive -->
+              <a class="btn btn-primary" href="add-beacon.html">Add New Beacon Service</a>
+                        </div>
+                        <!-- /.panel-body -->
+                    </div>
+                    <!-- /.panel -->
+                </div>
+                <!-- /.col-lg-12 -->
+            </div>
+            <!-- /.row -->
+
+        </div>
+        <!-- /#page-wrapper -->
+
+    </div>
+    <!-- /#wrapper -->
+
+<!--
   <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">beaconHub</a>
-      </div>
       <div class="collapse navbar-collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><%= nav_link 'Home', root_path %></li>
-          <li class="active"><%= nav_link 'Beacons', beacons_path %></li>
-        </ul>
         <ul class="nav navbar-nav navbar-right">
           <% if user_signed_in? %>
             <li>Logged in as <strong><%= current_user.email %></strong>.</li>
@@ -40,18 +160,6 @@
     </div>
   </div>
 
-  <div class="container">
-
-    <div class="starter-template">
-      <h1>beaconHub</h1>
-    </div>
-    <div>
-
-    <%= yield %>
-
-    </div>
-
-  </div>
 
 </body>
 </html>
