--- a/app/views/beacons/edit.html.erb
+++ b/app/views/beacons/edit.html.erb
@@ -1,6 +1,32 @@
-<h1>Editing beacon</h1>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">Edit Beacon Service</h1>
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
 
-<%= render 'form' %>
+      <div class="panel-heading">
+        Basic Form Elements
+      </div>
+      <!-- /.panel-heading -->
 
-<%= link_to 'Show', @beacon %> |
-<%= link_to 'Back', beacons_path %>
+      <div class="panel-body">
+
+        <%= render 'form' %>
+
+        <%= link_to 'Show', @beacon %> |
+        <%= link_to 'Back', beacons_path %>
+
+      </div>
+      <!-- /.panel-body -->
+
+    </div>
+    <!-- /.panel -->
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
