--- a/app/views/beacons/index.html.erb
+++ b/app/views/beacons/index.html.erb
@@ -1,33 +1,60 @@
-<div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover" id="iBeacons-service-list">
-    <thead>
-      <tr>
-        <th>Service Name</th>
-        <th>Service URL</th>
-        <th>It's an App?</th>
-        <th>Industry</th>
-        <th>Usage</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @beacons.each do |beacon| %>
-        <tr class="<%= cycle("odd", "even") -%>">
-          <td><%= beacon.name %></td>
-          <td><%= beacon.link %></td>
-          <td>Yes</td>
-          <td class="center">Library</td>
-          <td class="center">Push favourites</td>
-          <td>
-            <%= link_to 'Show', beacon, :class => 'btn btn-primary' %>
-            <%= link_to 'Edit', edit_beacon_path(beacon), :class => 'btn btn-primary' %>
-          </td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
+<div class="row">
+  <div class="col-lg-12">
+    <h1 class="page-header">List of Beacon Services</h1>
+  </div>
+  <!-- /.col-lg-12 -->
 </div>
-<!-- /.table-responsive -->
-<br>
+<!-- /.row -->
+<div class="row">
+  <div class="col-lg-12">
+    <div class="panel panel-default">
 
-<%= link_to 'Add New Beacon Service', new_beacon_path, :class => 'btn btn-primary' %>
+      <div class="panel-heading">
+        Beacon Service List
+      </div>
+      <!-- /.panel-heading -->
+      <div class="panel-body">
+
+        <div class="table-responsive">
+          <table class="table table-striped table-bordered table-hover" id="iBeacons-service-list">
+            <thead>
+              <tr>
+                <th>Service Name</th>
+                <th>Service URL</th>
+                <th>It's an App?</th>
+                <th>Industry</th>
+                <th>Usage</th>
+                <th>Action</th>
+              </tr>
+            </thead>
+            <tbody>
+              <% @beacons.each do |beacon| %>
+                <tr class="<%= cycle("odd", "even") -%>">
+                  <td><%= beacon.name %></td>
+                  <td><%= beacon.link %></td>
+                  <td>Yes</td>
+                  <td class="center">Library</td>
+                  <td class="center">Push favourites</td>
+                  <td>
+                    <%= link_to 'Show', beacon, :class => 'btn btn-primary' %>
+                    <%= link_to 'Edit', edit_beacon_path(beacon), :class => 'btn btn-primary' %>
+                  </td>
+                </tr>
+              <% end %>
+            </tbody>
+          </table>
+        </div>
+        <!-- /.table-responsive -->
+        <br>
+
+        <%= link_to 'Add New Beacon Service', new_beacon_path, :class => 'btn btn-primary' %>
+
+      </div>
+      <!-- /.panel-body -->
+
+    </div>
+    <!-- /.panel -->
+  </div>
+  <!-- /.col-lg-12 -->
+</div>
+<!-- /.row -->
