--- a/app/views/beacons/show.html.erb
+++ b/app/views/beacons/show.html.erb
@@ -62,8 +62,8 @@
           <%= @beacon.link %>
         </p>
 
-        <%= link_to 'Edit', edit_beacon_path(@beacon) %> |
-        <%= link_to 'Back', beacons_path %>
+        <%= link_to 'Edit', edit_beacon_path(@beacon), :class => 'btn btn-primary' %>
+        <%= link_to 'Back', beacons_path, :class => 'btn btn-primary' %>
 
       </div>
       <!-- /.panel-body -->
