--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,23 +19,34 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Open Beacon Directory</a>
+          <%= link_to 'Open Beacon Directory', root_path, :class => 'navbar-brand' %>
         </div>
         <!-- /.navbar-header -->
 
         <ul class="nav navbar-top-links navbar-right">
+          <% if user_signed_in? %>
+            <li>Logged in as <strong><%= current_user.email %></strong></li>
+          <% end %>
           <li class="dropdown">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
               <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
             </a>
             <ul class="dropdown-menu dropdown-user">
-              <li><a href="#"><i class="fa fa-user fa-fw"></i> User Profile</a>
-              </li>
-              <li><a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
-              </li>
-              <li class="divider"></li>
-              <li><a href="login.html"><i class="fa fa-sign-out fa-fw"></i> Logout</a>
-              </li>
+              <% if user_signed_in? %>
+                <li>
+                  <%= link_to '<i class="fa fa-user fa-fw"></i>User profile'.html_safe, edit_user_registration_path %>
+                </li>
+                <li>
+                  <a href="#"><i class="fa fa-gear fa-fw"></i> Settings</a>
+                </li>
+                <li class="divider"></li>
+                <li>
+                  <%= link_to '<i class="fa fa-sign-out fa-fw"></i>Logout'.html_safe, destroy_user_session_path, method: :delete  %>
+                </li>
+              <% else %>
+                <li><%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %></li>
+                <li><%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %></li>
+              <% end %>
             </ul>
             <!-- /.dropdown-user -->
           </li>
