--- a/app/views/beacons/index.html.erb
+++ b/app/views/beacons/index.html.erb
@@ -38,6 +38,9 @@
                   <td>
                     <%= link_to 'Show', beacon, :class => 'btn btn-primary' %>
                     <%= link_to 'Edit', edit_beacon_path(beacon), :class => 'btn btn-primary' %>
+                    <% if user_signed_in? %>
+                      <%= link_to 'Destroy', beacon, :class => 'btn btn-danger', method: :delete, data: { confirm: 'Are you sure?' } %>
+                    <% end %>
                   </td>
                 </tr>
               <% end %>
